# c-simple-games

./: .gitignore  CMakeLists.txt  README.md  main.c  users.txt
.github/workflows/: cmake-multi-platform.yml  main.yml
src/: csg.h  csg_game.c  csg_game.h  csg_inc.c  csg_inc.h  csg_leaderboard.c  csg_leaderboard.h  csg_login.c  csg_login.h  csg_main_menu.c  csg_main_menu.h  csg_math_quiz.c  csg_math_quiz.h  csg_maze.c  csg_maze.h  csg_prompt.c  csg_prompt.h  csg_type_racer.c  csg_type_racer.h
